public/stylesheets/Styles.css
/* ... */
#app #main #sysbar .bar_section #module_menu #module_menu_items li.hover {background-color: transparent; background-image: url(/images/menu_bg_hover.png); background-repeat: no-repeat; background-position: left top;}
#app #main #sysbar .bar_section #module_menu #module_menu_items li img { vertical-align:text-bottom; margin-right: 5px;}



/* End Module Menu */

/* System Bar */


#sysbar {
    background-image:url(/images/sysbar_bg.jpg);
    background-repeat:repeat-x;
    width: 100%;
    height: 50px;
    margin-top: 15px;
    margin-bottom: 10px;
    padding: 0px 10px;
    -moz-border-radius: 15px;
}

#app #main #sysbar .bar_section:first-child {
    border-left: none;
    width: 10%;
    padding-top: 2px;

}

#app #main #sysbar .bar_section {
    padding: 0.5%;
    height: 40px;
    background-color: transparent;
    display: inline-block;
    border-right-width: 1px;
    border-left-width: 1px;
    border-right-style: solid;
    border-left-style: solid;
    border-right-color: #FFF;
    border-left-color: #BBB;
    margin-left: 0px;
    line-height: 35px;
    float:left;
    text-align: center;
}

#app #main #sysbar .bar_section#toolbar  {
    width: 50%;
}

#app #main #sysbar .bar_section#search {
    width: 21%;
}

#app #main #sysbar .bar_section#sys_icons {
    width: 10%;
}

#app #main #sysbar .bar_section#help {
    width: 3%;
}

#app #main #sysbar .bar_section#help img {
    vertical-align: middle;
    padding-top: 6px;
}



#app #main #sysbar .bar_section:last-child {
    border-right: none;
    width: 4%;
}

/* End system bar */

/* Menu - Active menu item */
#app #lc #menu #menu_active .top {
    background-image:url(/images/corner_top.png);
    background-position: bottom right;
    background-repeat:no-repeat;
    height: 15px;
    width: 190px;
    float: right;
}

#app #lc #menu #menu_active .item {
    background-color: #f6f6f6;
    height: auto;
    width: 180px;
    -moz-border-radius-topleft: 10px;
    -moz-border-radius-bottomleft: 10px;
    background-image: none;
    padding: 10px 0 10px 10px ;
    float: right;
}

img {
    vertical-align:middle;
}

/*#app #lc #menu #menu_active .item img {
    vertical-align:text-bottom;
    margin-right: 5px;
}
*/
#app #lc #menu #menu_active .item ul {
    float:left;
    display:block;
    padding:2px
}

#app #lc #menu #menu_active .item li {
    float: left;
    padding: 0 0 0 4px;
}
#app #lc #menu #menu_active .item ul #selected {
    font-weight: bold;
    color: #333;
    margin-left: 5px;
}


#app #lc #menu #menu_active .bottom {
    background-image:url(/images/corner_bottom.png);
    background-position: top right;
    background-repeat:no-repeat;
    height: 15px;
    width: 190px;
    float: right;
}


/* main area */
#app #main {
    min-width: 900px;
    max-width: 1150px;
    width: 80%;
    min-height: 500px;
    float:left;
}

/* System Bar */

#sysbar {
    background-image:url(/images/sysbar_bg.jpg);
    background-repeat:repeat-x;
    width: 100%;
    height: 50px;
    margin-top: 15px;
    margin-bottom: 10px;
    padding: 0px 10px;
    -moz-border-radius: 15px;
}

/* Content Area */

#content {
    background-color: #f6f6f6;
    width:100%;
    float: left;
    min-height: 700px;
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 10px;
    -moz-border-radius: 15px;
}
/* header wrapper */
#app #main #content #header {
    height: 40px;
    width: 100%;
}
/* page title area */
#app #main #content #header #page_title {
    width: 49%;
    height: 40px;
    float:left;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 20px;
    line-height: 30px;
    color: #2C2C2C;
    margin-left: 1%;
}
/* list of lists area */
#app #main #content #header #lol {
    float: right;
    height: 40px;
    width: 49%;
    margin-right: 1%;
    text-align: right;
}
/* interface blue container*/
#app #main #content .container {
    font-family:Arial, Helvetica, sans-serif;
    color: #232323;
    background-image:url(/images/container_bg.png);
    background-repeat:repeat;
    width: 96%;
    float: left;
    padding: 2%;
    min-height: 10px;
    -moz-border-radius: 10px;
    margin-bottom: 10px;
}

#app #main #content .container_half {
    font-family:Arial, Helvetica, sans-serif;
    color: #232323;
    background-image:url(/images/container_bg.png);
    background-repeat:repeat;
    width: 46%;
    float: left;
    padding: 1%;
    min-height: 10px;
    -moz-border-radius: 10px;
    margin-bottom: 10px;
    margin-right:2%;
}

#app #main #content .container.green_container {
    background-image:url(/images/container_green_bg.png) !important;
}

#app #main #content .container.orange_container {
    background-image:url(/images/container_orange_bg.png) !important;
}

/* removes double margin from last div */
#app #main #content .container div:last-child {
    margin-bottom: 0px;
}

#app #main #content .container.single_container {
    margin-bottom:10px !important;
}

/* blue container title*/
#app #main #content .container h1 {
    color: #2C2C2C;
    font-size:18px;
    font-weight: bold;
    line-height: 22px;
    margin-bottom: 5px;

}

#app #main #content .container .title {
    float: left;
    display:inline;
    font-size: 12px;
    font-weight: bold;
}

#app #main #content .container .options {
    float: right;
    display:inline;
}

#app #main #content .container div.header_container .title h1{
    margin: 0 0 0 0 !important;
    color: #2C2C2C;
    font-size:20px;
    font-weight: bold;
    line-height: 22px;
    font-family:Arial,Helvetica,sans-serif;
}
/*blue container second title*/
#app #main #content .container h2 {
    font-size:16px;
    font-weight: bold;
    line-height: 20px;
    margin-bottom: 5px;
}
/*blue container body copy */
#app #main #content .container p {
    font-size: 14px;
    font-weight: normal;
    line-height: 16px;
    margin-bottom: 5px;
}
/* form line wrapper */
#app #main #content .container .form_line {
    float: left;
    height: 40px;
    width: 100%;
}
/* ... */

